--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -4,6 +4,8 @@
             <a href="https://www.linkedin.com/in/krishna-muskawad"><i class="fa-brands fa-linkedin"></i></a>
             <a href="https://github.com/KrishnaM0"><i class="fa-brands fa-github"></i></a>
             <a href="https://wa.me/919699002107"><i class="fa-brands fa-whatsapp" style="font-weight: 600;"></i></a>
+            <a href="https://www.instagram.com/krishna_muskawad/"><i class="fa-brands fa-instagram"></i></a>
+            <a href="mailto:krishnamuskawad31@gmail.com"><i class="fa-regular fa-envelope"></i></a>
         </div>
         <div class = "f-info-brand">&copy;EduX Private Limited</div>
         <div class="f-info-links">
