--- a/views/includes/userAccess.ejs
+++ b/views/includes/userAccess.ejs
@@ -3,10 +3,10 @@
         <!-- <a href="/dashboard" class = "signup"><%=currUser.username%></a> -->
         <a href="/dashboard" class = "signup">Dashboard</a>
         <hr>
-        <a href="/logout" class = "signup" style="border-radius:1rem;color: red; padding:0.5rem 1.5rem 0.5rem 1.5rem; background-color:rgba(255, 0, 0, 0.15);">Logout</a>
+        <a href="/logout" class = "signup">Logout</a>
     <%}else{%>
         <a href="/login" class = "signin">Login</a>
         <hr>
-        <a href="/signup" class = "signup" style="border-radius:1rem;color: red; padding:0.5rem 1.5rem 0.5rem 1.5rem; background-color:rgba(255, 0, 0, 0.15);">Signup</a>
+        <a href="/signup" class = "signup">Signup</a>
     <%}%>
 </div>
