--- a/public/css/style.css
+++ b/public/css/style.css
@@ -642,7 +642,12 @@ footer {
     /* color: #38bdf8; */
     color :#8134AF;
 }
-
+.userAccess a:hover{
+    border-radius:1rem;
+    color: red; 
+    padding:0.5rem 1.5rem 0.5rem 1.5rem; 
+    background-color:rgba(255, 0, 0, 0.15);
+}
 
 /* Rotation Animation */
 @keyframes rotateX {
