--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -12,7 +12,7 @@
           <input name = "password" id = "password" class = "form-control" type="password" placeholder = "password" required>
         </div>
         <div class = "login-btn">
-          <button type="submit" class="btn btn-primary">Submit</button>
+          <button type="submit" class="btn btn-primary">Login</button>
           <a href="/" class = "skipLogin">Skip Login</a>
         </div>  
     </div>  
