--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -16,7 +16,7 @@
         <input name = "password" id = "password" class = "form-control" type="password" placeholder = "password" required>
       </div>
       <div class = "login-btn">
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-primary">Signup</button>
         <a href="/" class = "skipLogin">Skip</a>
       </div>            
     </div>
