--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -151,6 +151,9 @@
             </div>
         </div>
     </div>
+    <div class="dashboard-leaderboard">
+        
+    </div>
     <br><br><br><br>
     <%-include("../includes/footer.ejs")%>
 </body>
