--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -5,7 +5,7 @@
         <p>Centralized Smart E-learning Platform</p>
     </div>
 
-    <h4 class="home-text">Explore Our Featured Courses</h4>
+    <h4 class="home-text" style="text-decoration: overline red;">Explore Our Featured Courses</h4>
 
     <div class="home-container">
         <% if (courses.length > 0) { %>
