--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -16,7 +16,7 @@
         <a class="nav-link active" href="/courses">All courses</a>
         <!-- <a class="nav-link active" href="/dashboard">Dashboard</a> -->
         <a class="nav-link active" href="/contact">Contact Us</a>
-        <a class="nav-link active getUser mb-3"><i class="fa-solid fa-user"></i></a>
+        <a class="nav-link active getUser"><i class="fa-solid fa-user"></i></a>
       </div>
     </div>
   </div>
