Edit-Profile Updates

--- a/views/users/editProfile.ejs
+++ b/views/users/editProfile.ejs
@@ -29,6 +29,10 @@
                 <input name = "about" value="<%=currUser.about%>" id = "about" class = "form-control" type="text" placeholder = "About yourself">
             </div>
             <div class = "mb-3">
+                <label for="dob" class = "form-label">Date of Birth</label>
+                <input name = "dob" value="<%=currUser.dob%>" id = "dob" class = "form-control" type="text" placeholder = "30/12/2001">
+            </div>
+            <div class = "mb-3">
                 <label for="mobileNumber" class = "form-label">Mobile Number</label>
                 <input name = "phone" value=<%=currUser.phone%> || '' id = "mobileNumber" class = "form-control" type="number" placeholder="+91 00000 00000">
             </div>
