--- a/views/pages/shows.ejs
+++ b/views/pages/shows.ejs
@@ -101,9 +101,11 @@
                                             <p class="starability-result card-text" data-rating="<%=review.rating%>">
                                             <p class = "card-text"><%=review.comment%></p>
                                             <%if(currUser){%>
-                                                <form class = "mb-3" action="/shows/<%=course._id%>/reviews/<%=review._id%>?_method=DELETE" method="POST">
-                                                    <button class = "btn btn-sm btn-dark">Delete</button>
-                                                </form>
+                                                <%if(review.author._id.equals(currUser._id)){%>
+                                                    <form class = "mb-3" action="/shows/<%=course._id%>/reviews/<%=review._id%>?_method=DELETE" method="POST">
+                                                        <button class = "btn btn-sm btn-dark"><i class="fa-solid fa-trash"></i></button>
+                                                    </form>
+                                                <%}%>
                                             <%}%>
                                         </div>
                                     </div>
