--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -42,7 +42,9 @@
                 </div>
                 <div class="dashboards-profile-btns">
                     <a href="/dashboard/editProfile" class="btn btn-outline-warning mt-3" style="margin-right:0.5rem;font-weight: 550;">Edit Profile</a>
-                    <button class="btn btn-outline-danger mt-3" style="font-weight: 550; margin-left:0.5rem;">Delete Account</button>
+                    <form action="/deleteAccount?_method=DELETE" method="POST" onsubmit="return confirm('Are you sure you want to delete your account? This action cannot be undone.');">
+                        <button type="submit" class="btn btn-outline-danger mt-3" style="font-weight: 550; margin-left:0.5rem;">Delete Account</button>
+                    </form>                    
                 </div>
             </div>
             <hr>
