--- a/views/pages/shows.ejs
+++ b/views/pages/shows.ejs
@@ -90,8 +90,8 @@
                         <hr>
                         <% } %>
                         <%if(course.reviews.length > 0){%>
-                            <h5>All Reviews</h5>
-                            <div class = "row mt-4">
+                            <h5 style="text-decoration: overline red;">All Reviews</h5>
+                            <div class = "reviewcard-div mt-4">
                                 <%for(review of course.reviews){%>
                                     <div class = "reviewCard card col-5 ms-3 mb-3">
                                         <div class="card-body">
