--- a/views/pages/shows.ejs
+++ b/views/pages/shows.ejs
@@ -34,6 +34,7 @@
                         src="<%= course.image || '/images/default-course.jpg' %>" 
                         class="shows-chapter-img mt-0" 
                         alt="<%= course.title %> image"
+                        style="width:720px;"
                     >
                     <h5 class="shows-chapter-title mt-2"><%= course.title || "Untitled Course" %></h5>
                     <p class="shows-chapter-tutor">
