Login/Signup UI Updates

--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -15,6 +15,7 @@
           <button type="submit" class="btn btn-primary">Login</button>
           <a href="/" class = "skipLogin">Skip Login</a>
         </div>  
-    </div>  
+    </div>
+    <p style="text-align: center; font-weight:600;">Don't have an account then, <a href="/signup">Create New</a></p>  
   </form>
 </body>
