Login/Signup UI Updates

--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -16,7 +16,7 @@
           <a href="/" class = "skipLogin">Skip Login</a>
         </div>  
     </div>
-    <p style="text-align: center; font-weight:600;">Don't have an account then, <a href="/signup">Create New</a></p>  
+    <p style="text-align: center; font-weight:600;">Don't have an Account? <a href="/signup">Create New</a></p>  
   </form>
   <br><br><br>
 </body>
