--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -20,7 +20,7 @@
         <a href="/" class = "skipLogin">Skip</a>
       </div>            
     </div>
-    <p style="text-align: center; font-weight:600;">Already have an account then, <a href="/login">Login</a></p>  
+    <p style="text-align: center; font-weight:600;">Already have an Account? <a href="/login">Login</a></p>  
   </form>
   <br><br><br>
 </body>
