--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,24 +1,32 @@
+<!-- Navbar -->
 <nav class="navbar navbar-expand-lg bg-body-light border-bottom sticky-top">
   <div class="container-fluid">
     <a class="navbar-brand" href="/">
-      <span class = "logo-name"> 
-        <b> <span class = "edu-color">Edu</span><span class="x-color">X</span></b>
-      </span></a>
-    
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
+      <span class="logo-name">
+        <b><span class="edu-color">Edu</span><span class="x-color">X</span></b>
+      </span>
+    </a>
+
+    <!-- Toggle button -->
+    <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#sidebarNav"
+      aria-controls="sidebarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
     </button>
-    
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
-        <a class="nav-link active" href="/" id = "home">Home</a>
-        
-        <a class="nav-link active" href="/courses">All courses</a>
-        <!-- <a class="nav-link active" href="/dashboard">Dashboard</a> -->
-        <a class="nav-link active" href="/contact">Contact Us</a>
-        <a class="nav-link active getUser"><i class="fa-solid fa-user"></i></a>
+
+    <!-- Sidebar (Offcanvas) -->
+    <div class="offcanvas offcanvas-start custom-sidebar" tabindex="-1" id="sidebarNav">
+      <div class="offcanvas-header">
+        <h1 class="offcanvas-title"><b><span class="edu-color">Edu</span><span class="x-color">X</span></b></h1>
+        <button type="button" class="btn-close custom-close-btn" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+      </div>
+      <div class="offcanvas-body">
+        <div class="navbar-nav">
+          <a class="nav-link active" href="/" id="home">Home</a>
+          <a class="nav-link active" href="/courses">All Courses</a>
+          <a class="nav-link active" href="/contact">Contact Us</a>
+          <a class="nav-link active getUser"><i class="fa-solid fa-user" style="font-size: 1.7rem;"></i></a>
+        </div>
       </div>
     </div>
   </div>
 </nav>
-
