--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -24,5 +24,6 @@
     <script src = "/js/script.js"></script>
     <script src="/js/shows.js"></script>
     <script src="/js/chatbot.js"></script>
+    <script src="/js/todo.js"></script>
 </body>
 </html>
