App Installation Updates

--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -25,6 +25,7 @@
           <a class="nav-link active" href="/courses">All Courses</a>
           <a class="nav-link active" href="/contact">Contact Us</a>
           <a class="nav-link active getUser"><i class="fa-solid fa-user" style="font-size: 1.7rem;"></i></a>
+          <button id="installAppBtn" class="btn btn-primary d-none">Install <i class="fa-solid fa-download"></i></button>
         </div>
       </div>
     </div>
